# Impulse_freq_resp_visual

./: CMakeLists.txt  algorithmtemplate.cpp  algorithmtemplate.h  datamanager.h  datatoproceed.cpp  datatoproceed.h  fftalgorithm.h  mainwindow.cpp  mainwindow.h  plotwidget.cpp  plotwidget.h  waterfallplot.cpp  waterfallplot.h
Algorithms/: fftalgorithm.cpp  fftalgorithm.h  ialgorithm.cpp  ialgorithm.h
DataToBeProcessed/: datamanager.cpp  datamanager.h  datasourcetype.cpp  datasourcetype.h  idata.cpp  idata.h
DataToBeProcessed/AlgorithmData/: fftalgorithmdata.cpp  fftalgorithmdata.h  ialgorithmdata.cpp  ialgorithmdata.h
DataToBeProcessed/FileData/: datfiledata.cpp  datfiledata.h  filedata.cpp  filedata.h
FIleReader/: datfilereader.cpp  datfilereader.h  filereader.h
Parser/: iparser.h
Parser/FileParser/: datfileparser.cpp  datfileparser.h  datfilereader.cpp  datfilereader.h  fileparser.h  filereader.h
UIComponents/: ampenvelspectrumwidget.cpp  ampenvelspectrumwidget.h
cmake/: FindFFTW.cmake
